[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/BattleCharacters/AI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/BattleCharacters/Enemies/Enemy.gd" type="Script" id=2]

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
faction = 1
knockback_modifier = 1.0
move_weight = 0.2
max_active_area = 50

[node name="Hitbox" parent="." index="4"]
collision_mask = 2

[node name="ActiveArea" type="Area2D" parent="." index="6"]

[node name="AttackArea" type="Area2D" parent="." index="7"]

[connection signal="body_entered" from="ActiveArea" to="." method="_on_ActiveArea_body_entered"]
[connection signal="body_exited" from="ActiveArea" to="." method="_on_ActiveArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
